# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reqpy_M"
version = "0.2.0"  
authors = [
    { name = "Luis A. Montejo", email = "luis.montejo@upr.edu" } 
]
description = "A Python module for spectral matching of earthquake records using CWT." 
readme = "README.md"
license = { text = "MIT" } 
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba" 
]

[project.urls]
"Homepage" = "https://github.com/LuisMontejo/REQPY" 