# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reqpy_M"
version = "0.2.2"  
authors = [
    { name = "Luis A. Montejo", email = "luis.montejo@upr.edu" } 
]
description = "A Python module for spectral matching of earthquake records using CWT." 
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT" # 
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba" 
]

[project.urls]
"Homepage" = "https://github.com/LuisMontejo/REQPY" 
"DOI" = "https://doi.org/10.5281/zenodo.4007728"